--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,63 @@
 /*BODY*/
 
 Body{
-  /*background-color: #FFFCF6;*/
+  background-color: #F2F2F2;
   margin: 0;
-}
-p {
-  font-family: 'Lora', Arial, Helvetica, sans-serif;  
 }
 
 h1 {
-  font-size: 48px;
+  font-size: 3,5vw;
+  font-family: Vollkorn SC, Arial, Helvetica, sans-serif;
+  text-align: center;
+  padding: 30px;
 }
 h2 {
   font-size: 36px;
+  font-family: Cabin Sketch, Arial, Helvetica, sans-serif;
+}
+h3 {
+  font-size: 36px;
 }
 p {
-  font-size: 24px;
+  font-size: clamp(16px, 2vw, 20px);
+  font-family: 'Lora', Arial, Helvetica, sans-serif;  
 }
 
 .wrapper {
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
+}
+
+.hero-image img, .image img{
+  max-width: 100%;
+}
+
+.container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 40px;
+}
+
+.textfield-purple {
+  background-color: #D1C8EF;
+  padding: 0px 20px;
+}
+
+.image, .textfield-purple {
+  flex: 1;
+  margin: 20px;
+}
+
+.h2-center {
+  text-align: center;
+  padding: 20px;
+}
+
+.divider img{
+  padding: 60px 0px;
+  max-width: 100%;
+  margin: 20px;
 }
 
 /*HEADER*/
@@ -43,5 +80,35 @@ header {
   text-decoration: none;
   font-size: 24px;
   font-family: Cabin Sketch, Arial, Helvetica, sans-serif;
+}
+
+/*HOME*/
+
+.link-row {
+  display: flex;
+  gap: 30px;
+}
+
+.link {
+  text-align: center;
+}
+
+.link h2 {
+  margin-bottom: 2px;
+}
+
+.link img {
+  max-width: 100%;
+  margin-bottom: 20px;
+}
+
+.cta {
+  background-color: #2B7B8C;
+  border: 1px solid #000;
+  padding: 10px 30px;
+  border-radius: 5px;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: clamp(16px, 2vw, 20px);
 }
 
