--- a/css/styles.css
+++ b/css/styles.css
@@ -61,11 +61,12 @@ p {
   margin: 20px;
 }
 
-.back-to-top{
+.back-to-top-button{
   display: flex;
   justify-content: center;
   margin: 40px;
   max-width: 100%;
+  
 }
 
 /*HEADER*/
@@ -88,6 +89,43 @@ header {
   text-decoration: none;
   font-size: 24px;
   font-family: Cabin Sketch, Arial, Helvetica, sans-serif;
+}
+
+/*FOOTER*/
+
+footer {
+  background-color: #2B7B8C;
+  padding: 30px;
+}
+
+.footer-content {  
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer-contact-icon {
+  display: flex;
+  align-items: center;
+}
+
+.footer-contact-icon img{
+  width: 30px;
+  height: 30px;
+  padding-right: 5px;
+}
+
+.footer3 img{
+  padding: 30px;
+  max-height: clamp(40px, 4vw, 60px);
+}
+
+.copy {
+  text-align: center;
+}
+
+.footer1 h2 {
+  text-align: center;
 }
 
 /*HOME*/
@@ -125,3 +163,37 @@ header {
   text-align: center;
 }
 
+
+
+
+
+@media (max-width: 1060px) {
+
+  .footer2 img {
+    max-width: 250px;
+  }
+
+  .footer3 img{
+    padding: 10px;
+  }
+}
+
+
+@media (max-width: 810px) {
+
+  .footer-content {  
+    flex-direction: column;
+  }
+
+  .footer1 {
+    order: 1;
+    padding: 20px;
+  }
+
+  .footer3 {
+    order: 2;
+  }
+
+
+
+}
