--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+html {
+  scroll-behavior: smooth;
+  scroll-padding: 110px;
+}
+
+
 /*BODY*/
 
 Body{
@@ -12,7 +18,7 @@ h1 {
   padding: 30px;
 }
 h2 {
-  font-size: 36px;
+  font-size: clamp(24px, 3vw, 36px);
   font-family: Cabin Sketch, Arial, Helvetica, sans-serif;
 }
 h3 {
@@ -37,12 +43,14 @@ p {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
   gap: 40px;
 }
 
 .textfield-purple {
   background-color: #D1C8EF;
   padding: 0px 20px;
+  border: 1px solid #000;
 }
 
 .image, .textfield-purple {
@@ -55,6 +63,12 @@ p {
   padding: 20px;
 }
 
+.divider {
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+}
+
 .divider img{
   padding: 60px 0px;
   max-width: 100%;
@@ -64,9 +78,8 @@ p {
 .back-to-top-button{
   display: flex;
   justify-content: center;
-  margin: 40px;
-  max-width: 100%;
-  
+  margin: 40px; 
+  scroll-margin-top: 80px;
 }
 
 /*HEADER*/
@@ -84,11 +97,19 @@ header {
 }
 
 .header-nav a{
-  padding: 20px;
+  padding: 30px;
   color: #000000;
   text-decoration: none;
   font-size: 24px;
   font-family: Cabin Sketch, Arial, Helvetica, sans-serif;
+}
+
+.hamburger-icon, #menu-checkbox {
+  display: none;
+}
+
+.header-logo img{
+  max-width: clamp(198px, 20vw, 312px);
 }
 
 /*FOOTER*/
@@ -132,11 +153,17 @@ footer {
 
 .link-row {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 30px;
+  margin: 0px 20px;
 }
 
 .link {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .link h2 {
@@ -144,9 +171,9 @@ footer {
 }
 
 .link img {
-  max-width: 100%;
   margin-bottom: 20px;
   border-radius: 10px;
+  max-width: 342px;
 }
 
 .cta {
@@ -161,14 +188,22 @@ footer {
 
 .center-text {
   text-align: center;
+  margin: 40px;
 }
 
 
 
 
 
-@media (max-width: 1060px) {
+@media (max-width: 1115px) {
 
+  /*HEADER*/
+  .header-nav a{
+    padding: 12px;
+    font-size: 22px;
+  }
+
+  /*FOOTER*/
   .footer2 img {
     max-width: 250px;
   }
@@ -178,9 +213,74 @@ footer {
   }
 }
 
+@media (max-width: 900px) {
 
+  /*HEADER*/
+  .header-nav a{
+  padding: 10px;
+  }
+}
+
+  /*TABLET*/
 @media (max-width: 810px) {
 
+.container {
+  flex-direction: column;
+}
+
+  /*HEADER*/
+nav{
+  display: none;
+}
+
+#menu-checkbox:checked ~ nav {
+  display: block;
+}
+
+header {
+  position: relative;
+  position: sticky;
+  top: 0px;
+}
+
+nav {
+  position: absolute;
+  background: #F2F2F2;
+  padding: 60px;
+  top: 81px;
+  left: 0px;
+  border: 1px solid #000;
+}
+
+.header-section {
+  justify-content: center;
+  position: sticky;
+  top: 0px;
+}
+
+nav a {
+  display: block;
+}
+
+.header-nav a {
+  padding: 20px 0px;
+  font-size: 36px;
+}
+
+.hamburger-icon {
+  display: block;
+  margin: 20px;
+}
+
+.header-logo {
+  order: 1;
+  margin-right: 40px;
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+}
+
+/*FOOTER*/
   .footer-content {  
     flex-direction: column;
   }
@@ -193,7 +293,55 @@ footer {
   .footer3 {
     order: 2;
   }
-
-
-
 }
+
+/*MAIN PAGE*/
+
+.link img {
+  max-width: 260px;
+}
+
+.center-text {
+  margin: 20px 40px;
+}
+
+.divider img {
+  padding: 30px 0px;
+}
+
+.container {
+  gap: 20px;
+}
+
+
+
+
+@media (max-width: 600px) {
+
+/*MAIN PAGE*/
+.link img {
+  max-width: 200px;
+}  
+}
+
+@media (max-width: 470px) {
+
+  /*MAIN PAGE*/
+  .link img {
+    max-width: 160px;
+  }  
+  }
+
+
+/*MOBILE*/
+  @media (max-width: 400px) {
+
+.link img {
+  max-width: 120px;
+}
+
+.cta {
+  padding: 7px 20px;
+}
+
+  }
