--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ p {
 
 .image img {
   max-width: 100%;
+  border: var(--border);
 }
 
 .container {
@@ -53,7 +54,7 @@ p {
   margin-bottom: 40px;
 }
 
-.textfield-purple, .textfield-grey, .textfield-dark-green {
+.textfield-purple, .textfield-grey, .textfield-dark-green, .textfield-blue {
   background-color: var(--color-light-pink);
   padding: 0px 20px;
   border: var(--border);
@@ -72,6 +73,10 @@ p {
 .textfield-dark-green{
   background-color: var(--color-header-footer);
   color: #ffffff;
+}
+
+.textfield-blue {
+  background-color: var(--color-light-blue);
 }
 
 .image, .text {
@@ -252,9 +257,17 @@ footer {
   margin: 10px;
 }
 
-.blue-background {
+.blue-background, .green-background, .site-background {
   background-color: var(--color-light-blue);
   padding: 30px 0px;
+}
+
+.green-background {
+  background-color: var(--color-light-green);
+}
+
+.site-background {
+  background-color: var(--color-site-background);
 }
 
 .img-and-text {
