--- a/css/imports/variables.css
+++ b/css/imports/variables.css
@@ -6,4 +6,6 @@
   --color-light-green: #BCEDBE;
   --color-header-footer: #2B7B8C;
   --border: 1px solid #000;
+  --color-white: #FFFFFF;
+  --color-black: #000000;
   }
