--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ Body{
 }
 
 h1 {
-  font-size: 3,5vw;
+  font-size: clamp(24px, 4vw, 58px);
   font-family: Vollkorn SC, Arial, Helvetica, sans-serif;
   text-align: center;
   padding: 30px;
@@ -189,7 +189,7 @@ header {
 }
 
 .header-logo img{
-  max-width: clamp(198px, 20vw, 312px);
+  max-width: clamp(150px, 30vw, 312px);
   padding: 10px;
   margin-left: 20px;
 }
@@ -230,266 +230,4 @@ footer {
 
 .footer1 h2 {
   text-align: center;
-}
-
-
-
-/*MEDIA QUERIES
-I tried putting the media queries in its own css file, but that broke some of the css, including the hamburger menu. I decided to just have it as part of the main css file as it is something we haven't really learn so much about.*/
-
-@media (max-width: 1115px){
-
-/*Header*/
-.header-nav a {
-  padding: 12px;
-} 
-
-/*Footer*/
-.footer2 img {
-  max-width: 250px;
-}
-.footer3 img{
-  padding: 10px;
-}
-
-/*Exhibition Site Extra*/
-
-.exhibition-links a {
-  padding: 30px 15px;
-}
-
-.cost {
-  min-height: 260px;
-}
-
-.evot {
-  min-height: 310px;
-}
-
-.robt {
-  min-height: 290px;
-}
-}
-
-
-@media (max-width: 920px) {
-
-  /*HEADER*/
-  .header-nav a{
-  padding: 9px;
-  }
-
-  /*Exhibition Site Extra*/
-
-.exhibition-links a {
-  padding: 20px 10px;
-  font-size: 20px;
-}
-}
-
-
-  /*TABLET*/
-@media (max-width: 810px) {
-
-
-/*General Tablet*/
-html {
-  scroll-padding: 90px;
-}
-
-.container, .iandt, .text-container{
-  flex-direction: column;
-  gap: 20px;
-}
-
-/*Header Tablet*/
-nav{
-  display: none;
-}
-
-#menu-checkbox:checked ~ nav {
-  display: block;
-}
-
-header {
-  position: relative;
-  position: sticky;
-  top: 0px;
-}
-
-.header-logo img{
-  margin-left: 0px;
-}
-
-.header-nav {
-  position: absolute;
-  background: var(--color-light-grey);
-  padding: 60px;
-  top: 81px;
-  left: 0px;
-  border: var(--border);
-}
-
-.header-section {
-  justify-content: center;
-  position: sticky;
-  top: 0px;
-}
-
-nav a {
-  display: block;
-}
-
-.header-nav a {
-  padding: 20px 0px;
-  font-size: 36px;
-}
-
-.hamburger-icon {
-  display: block;
-  margin: 20px;
-}
-
-.header-logo {
-  order: 1;
-  margin-right: 40px;
-  display: flex;
-  flex-grow: 1;
-  justify-content: center;
-}
-
-#active {
-  color: var(--color-header-footer);
-  font-size: 40px;
-}
-
-/*Footer Tablet*/
-.footer-content {  
-  flex-direction: column;
-}
-
-.footer1 {
-  order: 1;
-  padding: 20px;
-}
-
-.footer3 {
-  order: 2;
-}
-
-
-/*Main Page Tablet*/
-.link img {
-  max-width: clamp(120px, 40vw, 240px);
-}
-
-.center-text {
-  margin: 20px 40px;
-}
-
-.divider img {
-  padding: 30px 0px;
-  margin: 0px 20px;
-}
-
-.textbox {
-  max-width: 100%;
-  padding: 10px 20px;
-}
-
-
-/*EXPLORE PAGE*/
-.textbox p {
-  max-width: 100%;
-}
-
-.iandt {
-  align-items: center;
-}
-
-
-/*Exhibition Page Tablet*/
-.exhibition-links a {
-  padding: 15px 10px;
-  font-size: 20px;
-}
-
-.cost {
-  min-height: 260px;
-}
-
-.evot {
-  min-height: 220px;
-}
-
-.robt {
-  min-height: 150px;
-}
-
-
-/*Events Page Tablet*/
-.text h3 {
-  text-align: center;
-}
-
-
-/*Visit Page Tablet*/
-.textfield-blue {
-  min-width: clamp(280px, 50vw, 500px);
-  max-width: 280px;
-}
-
-.location {
-  min-height: 250px;
-}
-
-.hours {
-  min-height: 360px;
-}
-
-.contact-form {
-  flex-direction: column;
-  margin: 0px 20px;
-}
-}
-
-
-@media (max-width: 620px) { 
-
-/*EXPLORE PAGE*/
-.explore-row {
-  gap: 10px;
-}
-
-.visit-iandt {
-  flex-direction: column;
-}
-}
-
-
-/*MOBILE*/
-  @media (max-width: 400px) {
-
-.cta {
-  padding: 7px 20px;
-}
-
-
-/*Explore Page Mobile*/
-.explore-row {
-  gap: 5px;
-}
-
-
-/*Exhibition Page Mobile*/
-.exhibition-links {
-  flex-direction: column;
-  text-align: center;
-}
-
-
-/*Visit Page Mobile*/
-.textfield-blue {
-  min-width: clamp(120px, 70vw, 280px);
-}
 }
