--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,16 @@ span {
   border: var(--border);
 }
 
+.location, .admission, .hours {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.textfield-blue h2 {
+  display: flex;
+  justify-content: flex-start;
+}
+
 .pink-background {
   background-color: var(--color-light-pink);
 }
