--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 @import "imports/explore.css";
 @import "imports/exhibition.css";
 @import "imports/visit.css";
+@import "imports/events.css";
 
 
 /* GENERAL CSS THAT APPLIES TO ALL PAGES, HEADER AND FOOTER */
