--- a/css/imports/variables.css
+++ b/css/imports/variables.css
@@ -4,7 +4,7 @@
   --color-light-pink: #D1C8EF;
   --color-light-grey: #D9D9D9;
   --color-light-green: #BCEDBE;
-  --color-header-footer: #2B7B8C;
+  --color-header-footer: #215C69;
   --border: 1px solid #000;
   --color-white: #FFFFFF;
   --color-black: #000000;
