--- a/css/styles.css
+++ b/css/styles.css
@@ -22,25 +22,23 @@ Body{
 
 h1 {
   font-size: clamp(24px, 4vw, 58px);
-  font-family: Vollkorn SC, Arial, Helvetica, sans-serif;
+  font-family: var(--text-h1);
   text-align: center;
   padding: 30px;
 }
 h2 {
   font-size: clamp(24px, 3vw, 36px);
-  font-family: Cabin Sketch, Arial, Helvetica, sans-serif;
+  font-family: var(--text-h2);
 }
 h3 {
   font-size: clamp(16px, 2vw, 24px);
-  font-family: Indie Flower, Arial, Helvetica, sans-serif;
+  font-family: var(--text-h3);
 }
-p {
+p, span {
   font-size: clamp(16px, 2vw, 20px);
-  font-family: 'Lora', Arial, Helvetica, sans-serif; 
+  font-family: var(--text-p-and-span);
 }
 span {
-  font-size: clamp(16px, 2vw, 20px);
-  font-family: 'Lora', Arial, Helvetica, sans-serif;
   padding: 8px;
 }
 
@@ -177,7 +175,7 @@ header {
   color: var(--color-white);
   text-decoration: none;
   font-size: clamp(18px, 1vw, 24px);
-  font-family: Cabin Sketch, Arial, Helvetica, sans-serif;
+  font-family: var(--text-h2)
 }
 
 #active {
@@ -188,6 +186,10 @@ header {
 
 .hamburger-icon, #menu-checkbox {
   display: none;
+}
+
+.header-logo {
+  margin: 0px;
 }
 
 .header-logo img{
