--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,19 @@ span {
   border: var(--border);
 }
 
+.blue-background, .green-background, .site-background, .pink-background {
+  background-color: var(--color-light-blue);
+  padding: 30px 0px;
+}
+
+.green-background {
+  background-color: var(--color-light-green);
+}
+
+.site-background {
+  background-color: var(--color-site-background);
+}
+
 .pink-background {
   background-color: var(--color-light-pink);
 }
@@ -170,8 +183,15 @@ header {
   align-items: center;
 }
 
+.header-section ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+}
+
 .header-nav a, .exhibition-links a{
-  padding: 25px;
+  padding: 28px;
   color: var(--color-white);
   text-decoration: none;
   font-size: clamp(18px, 1vw, 24px);
@@ -206,7 +226,7 @@ footer {
   padding: 30px;
 }
 
-.footer-content h2, .footer-content p, .copy {
+.footer-content h2, .footer-content p, .copyright {
   color: var(--color-white);
 }
 
@@ -227,15 +247,15 @@ footer {
   padding-right: 5px;
 }
 
-.footer3 img{
+.social-icons img{
   padding: 30px;
   max-height: clamp(40px, 4vw, 60px);
 }
 
-.copy {
+.copyright {
   text-align: center;
 }
 
-.footer1 h2 {
+.contact-info h2 {
   text-align: center;
 }
