--- a/css/media.css
+++ b/css/media.css
@@ -78,7 +78,7 @@ header {
 .header-nav {
   position: absolute;
   background: var(--color-light-grey);
-  padding: 40px;
+  padding: 40px 60px 40px 0px;
   top: 82px;
   left: 0px;
   border: var(--border);
