--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 @import "imports/exhibition.css";
 @import "imports/visit.css";
 @import "imports/events.css";
+@import "imports/contact.css";
 
 
 /* GENERAL CSS THAT APPLIES TO ALL PAGES, HEADER AND FOOTER */
